--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <header class="masthead bg-primary text-white text-center">
     <div class="container">
       <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
-      <h1 class="text-uppercase mb-0">Your name here</h1>
+      <h1 class="text-uppercase mb-0">AARTHI ASHOK KUMAR</h1>
       <hr class="star-light">
       <h2 class="font-weight-light mb-0">Web Developer - Graphic Artist - User Experience Designer</h2>
     </div>
